sIBL_GUI - 2.1.1 - Change Log -
- Updater / FTP Code Refactoring, Change Log, Manual / Help Files Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,9 +14,12 @@
         	<span style="font-size: 14pt; font-weight: 700">2.1.1 - Stable</span>
         <ul>
         	<li>
+              	sIBL_GUI_FTP is now starting Download automatically when invoked, "Start Download" Button has been removed.
+            </li>
+        	<li>
               	sIBL_GUI now restores the last visited folder.
             </li>
-        	 <li>
+        	<li>
               	Render Combo Box added in the Import Tab ( Usefull when you have multiple Templates for a Renderer ).
             </li>
             <li>
