--- a/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
+++ b/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
@@ -149,7 +149,7 @@
                     <br/>
                     <p>
                         <p>
-                            After entered the name, a browser tree will popup, choose the root of one of your <b>Collections</b>.
+                            After entered the name, a browser tree will popup, choose the <b>Root</b> of one of your <b>Collections</b> ( Picking directly a Smart IBL Set Directory will not work ).
                         </p>
                         <br/>
                         <br/>
@@ -262,6 +262,10 @@
                             <li>
                                 <b>Software ComboBox</b>
                                 : Target 3D Package for the Loader Script.
+                            </li>
+							<li>
+                                <b>Renderer ComboBox</b>
+                                : Renderer For The Loader Script.
                             </li>
                             <li>
                                 <b>Template ComboBox</b>
