sIBL_GUI - 2.1.1 - Change Log -
- Updated Externals Tools, NSIS Installer.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         	<span style="font-size: 14pt; font-weight: 700">2.1.1 - Stable</span>
         <ul>
         	<li>
+              	Updated sIBL_GUI Help / Manual.
+            </li>
+        	<li>
               	sIBL_GUI_FTP is now starting Download automatically when invoked, "Start Download" Button has been removed.
             </li>
         	<li>
